deployment_w_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rso-katalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rso-katalog
  template:
    metadata:
      labels:
        app: rso-katalog
    spec:
      containers:
        - image: mista123/katalog-rso:latest
          name: katalog
          ports:
            - containerPort: 8087
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: rso-katalog
spec:
  type: ClusterIP
  ports:
    - port: 8087
      protocol: TCP
      targetPort: server
  selector:
    app: rso-katalog
