ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: moj-proxy-ingress-brez-rezanja-naslova
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: rso-frontend
              servicePort: 8090
              path: /(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: moj-proxy-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: rso-katalog
              servicePort: 8087
            path: /katalog(/|$)(.*)
          - backend:
              serviceName: rso-analytics
              servicePort: 8088
            path: /analytics(/|$)(.*)
          - backend:
              serviceName: rso-external
              servicePort: 8089
            path: /external(/|$)(.*)
          - backend:
              serviceName: rso-frontend
              servicePort: 8090
            path: /frontend(/|$)(.*)
          - backend:
              serviceName: rso-payments
              servicePort: 8091
            path: /payments(/|$)(.*)
